buildlog.txt
/tmp/java_wBUblp/CalculatetShippingRates.java:34: error: ')' expected
                        }
                         ^
1 error

